@@ -1,7 +1,10 @@
 package de.ellpeck.naturesaura.items;
 
+import com.mojang.serialization.Codec;
+import com.mojang.serialization.codecs.RecordCodecBuilder;
 import de.ellpeck.naturesaura.NaturesAura;
 import net.minecraft.ChatFormatting;
+import net.minecraft.core.component.DataComponentType;
 import net.minecraft.network.chat.Component;
 import net.minecraft.network.chat.MutableComponent;
 import net.minecraft.network.chat.Style;
@@ -32,7 +35,7 @@ public class ItemBreakPrevention extends ItemImpl {
             if (second.getItem() != ModItems.BREAK_PREVENTION)
                 return;
             var output = stack.copy();
-            output.getOrCreateTag().putBoolean(NaturesAura.MOD_ID + ":break_prevention", true);
+            output.set(Data.TYPE, new Data(true));
             event.setOutput(output);
             event.setMaterialCost(1);
             event.setCost(1);
@@ -44,7 +47,7 @@ public class ItemBreakPrevention extends ItemImpl {
             if (player == null)
                 return;
             var stack = player.getMainHandItem();
-            if (!stack.hasTag() || !stack.getTag().getBoolean(NaturesAura.MOD_ID + ":break_prevention"))
+            if (!stack.has(Data.TYPE) || !stack.get(Data.TYPE).enabled)
                 return;
             if (ElytraItem.isFlyEnabled(stack))
                 return;
@@ -55,17 +58,28 @@ public class ItemBreakPrevention extends ItemImpl {
         @OnlyIn(Dist.CLIENT)
         public void onTooltip(ItemTooltipEvent event) {
             var stack = event.getItemStack();
-            if (!stack.hasTag() || !stack.getTag().getBoolean(NaturesAura.MOD_ID + ":break_prevention"))
+            if (!stack.has(Data.TYPE) || !stack.get(Data.TYPE).enabled)
                 return;
             var tooltip = event.getToolTip();
             tooltip.add(Component.translatable("info." + NaturesAura.MOD_ID + ".break_prevention").setStyle(Style.EMPTY.applyFormat(ChatFormatting.GRAY)));
             if (ElytraItem.isFlyEnabled(stack))
                 return;
-            if (tooltip.size() < 1)
+            if (tooltip.isEmpty())
                 return;
-            var head = tooltip.get(0);
+            var head = tooltip.getFirst();
             if (head instanceof MutableComponent)
                 ((MutableComponent) head).append(Component.translatable("info." + NaturesAura.MOD_ID + ".broken").setStyle(Style.EMPTY.applyFormat(ChatFormatting.GRAY)));
         }
+
     }
+
+    public record Data(boolean enabled) {
+
+        public static final Codec<Data> CODEC = RecordCodecBuilder.create(i -> i.group(
+            Codec.BOOL.fieldOf("enabled").forGetter(d -> d.enabled)
+        ).apply(i, Data::new));
+        public static final DataComponentType<Data> TYPE = DataComponentType.<Data>builder().persistent(Data.CODEC).cacheEncoding().build();
+
+    }
+
 }
